--- a/frontend/diary-frontend/package.json
+++ b/frontend/diary-frontend/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^7.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "uuid": "3.3.3"
   },
   "devDependencies": {
